# svelte-wasm-template

client/: package-lock.json  package.json  webpack.config.js
client/proto/: Default.svelte
client/public/: index.html  manifest.json  smui-dark.css  smui.css
client/src/: App.svelte  routes.js
client/src/components/: BannerCard.svelte  CornerFab.svelte  ListView.svelte  LoadingOverlay.svelte  LongProperty.svelte  NavBar.svelte  SearchBar.svelte
client/src/components/Cards/: CreateNewCard.svelte  GenericCard.svelte
client/src/components/Dialogs/: Error.svelte  Logout.svelte
client/src/models/: Routes.ts  State.ts
client/src/routes/: Home.svelte  NotFound.svelte
client/src/routes/dashboards/: Dashboard.svelte
client/src/routes/generic/: About.svelte  Home.svelte  (+1 more)
client/src/services/: LocalStorage.ts
client/src/theme/: _smui-theme.scss
server/: Cargo.toml
server/requests/: login.rest  project.rest  sign_up.rest  user.rest
server/src/: main.rs
server/src/helpers/: constants.rs  errors.rs  mod.rs  url.rs
server/src/models/: mod.rs  req.rs  token.rs
server/src/routes/: create.rs  delete.rs  login.rs  mod.rs  read.rs  sign_up.rs  update.rs
server/src/services/: create.rs  mod.rs  read.rs  security.rs  utils.rs
server/src/tests/: create.rs
shared/: Cargo.toml  README.md
shared/src/: lib.rs
shared/src/edges/: mod.rs  user_assignment.rs
shared/src/models/: user.rs
shared/src/nodes/: action.rs  approval.rs  expense.rs  mod.rs  project.rs
shared/src/traits/: card.rs
shared/src/ui/: card.rs
shared/src/utils/: routes.rs
(+5 files in other folders)
