[package]
authors = ["andrewmruddy <andrewmruddy@gmail.com>"]
edition = "2018"
name = "src-server"
version = "0.1.0"
[dependencies]
actix-rt = "*"
actix-web-httpauth = "0.4.1"
bcrypt = "0.10.1"
colored = "2"
guid = "*"
hmac = "*"
jwt = "0.15.0"
regex = "*"
serde_derive = "*"
serde_json = "*"
sha2 = "*"
uuid = "*"

[dependencies.actix-cors]
version = "0.6.0-beta.6"

[dependencies.actix-web]
version = "4.0.0-beta.10"

[dependencies.arangors]
path = "../../../github/arangors"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.shared]
path = "../shared"
