[package]
authors = ["andrewmruddy <andrewmruddy@gmail.com>"]
edition = "2018"
name = "shared"
version = "0.1.0"
[dependencies]
js-sys = "*"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "*"
wasm-bindgen = "*"

[dependencies.uuid]
features = ["serde", "v4", "wasm-bindgen"]
version = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]
